# mapperbus

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  justfile  meson.build  meson_options.txt
src/app/: app.cpp  app.hpp  configuration.cpp  configuration.hpp  emulation_session.cpp  emulation_session.hpp  main.cpp  meson.build  session_actions.cpp  session_actions.hpp
src/core/: emulator.cpp  emulator.hpp  logger.cpp  logger.hpp  meson.build  types.hpp
src/core/apu/: apu.cpp  apu.hpp  audio_settings.hpp  blip_buffer.cpp  blip_buffer.hpp  expansion_gains.hpp
src/core/bus/: memory_bus.cpp  memory_bus.hpp
src/core/cartridge/: cartridge.cpp  cartridge.hpp  ines_header.cpp  ines_header.hpp  rom_crc32.cpp  rom_crc32.hpp  rom_database.cpp  rom_database.hpp
src/core/cpu/: cpu.cpp  cpu.hpp
src/core/fds/: fds.cpp  fds.hpp
src/core/input/: controller.cpp  controller.hpp
src/core/mappers/: axrom.cpp  axrom.hpp  cnrom.cpp  cnrom.hpp  color_dreams.cpp  color_dreams.hpp  mapper.hpp  mapper_registry.cpp  mapper_registry.hpp  mapper_state.cpp  mmc1.cpp  mmc1.hpp  mmc2.cpp  mmc2.hpp  mmc3.cpp  mmc3.hpp  mmc5.cpp  mmc5.hpp  namco163.cpp  namco163.hpp  nrom.cpp  nrom.hpp  sunsoft5b.cpp  sunsoft5b.hpp  uxrom.cpp  uxrom.hpp  vrc6.cpp  vrc6.hpp  vrc7.cpp  vrc7.hpp
src/core/ppu/: loopy.hpp  ppu.cpp  ppu.hpp
src/core/state/: state.hpp
src/frontends/cli/: main.cpp  meson.build
src/frontends/nodalkit/: gui_audio_backend.cpp  gui_audio_backend.hpp  gui_controller.cpp  gui_controller.hpp  gui_widgets.hpp  main.cpp  meson.build  nodalkit_input.hpp
src/frontends/sdl3/: gpu_common.hpp  gpu_fsr_upscaler.cpp  gpu_fsr_upscaler.hpp  gpu_upscaler.cpp  gpu_upscaler.hpp  meson.build  sdl3_audio.cpp  sdl3_audio.hpp  sdl3_input.cpp  sdl3_input.hpp  sdl3_video.cpp  sdl3_video.hpp
src/frontends/sdl3/shaders/: fsr1_shader.hpp  xbrz_shader.hpp
src/platform/: meson.build
src/platform/audio/: audio_backend.hpp  null_audio.hpp
src/platform/input/: gamepad_config.hpp  input_backend.hpp  null_input.hpp
src/platform/video/: fsr1.cpp  fsr1.hpp  null_video.hpp  upscaler.hpp  video_backend.hpp  xbrz.cpp  xbrz.hpp
subprojects/: SDL_shadercross.wrap
tests/: meson.build
tests/integration/: test_battle_city_render.cpp
tests/support/: test_rom.hpp
tests/unit/: test_apu.cpp  test_audio_pipeline.cpp  test_battery_save.cpp  test_bus.cpp  test_configuration.cpp  test_cpu.cpp  test_cpu_accuracy.cpp  test_emulation_session.cpp  test_fds.cpp  test_mapper_timing.cpp  test_mappers.cpp  test_mmc5_vrc7.cpp  test_nrom.cpp  test_ppu.cpp  test_region.cpp  test_ring_buffer.cpp  test_rom_database.cpp  test_save_state.cpp  test_sdl3_input.cpp
